# ros2-jazzy-robotic-arm

./: .gitignore  README.md
src/Adel_Arm/: CMakeLists.txt  package.xml
src/Adel_Arm/config/: joint_controller.yaml  joint_names_Adel_Arm.yaml
src/Adel_Arm/launch/: display.launch  gazebo.launch  sim.launch.py
src/Adel_Arm/meshes/: base_link.STL  gear_l.STL  gear_r.STL  left_link.STL  lg_l.STL  link1.STL  link2.STL  link3.STL  link4.STL  link5.STL  llink3.STL  rg_l.STL  right_link.STL
src/Adel_Arm/urdf/: Adel_Arm.csv  Adel_Arm.urdf
src/moveit_one/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_one/config/: Adel_Arm.ros2_control.xacro  Adel_Arm.srdf  Adel_Arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/moveit_one/launch/: demo.launch.py  demo_gazebo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
